[package]
name = "whiskers"
version = "0.1.0"
edition = "2021"

[dependencies]
catppuccin = { version = "1.3.0", features = ["css"] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
css-colors = "1.0.1"
handlebars = "4.4.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
titlecase = "2.2.1"
yaml-front-matter = "0.1.0"
