[package]
name = "whiskers"
version = "0.2.1"
authors = ["backwardspy <backwardspy@pigeon.life>"]
edition = "2021"
description = "Soothing port creation tool for the high-spirited!"
readme = "README.md"
homepage = "https://github.com/backwardspy/whiskers"
repository = "https://github.com/backwardspy/whiskers"
license = "MIT"

[dependencies]
catppuccin = { version = "1.3.0", features = ["css"] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
css-colors = "1.0.1"
handlebars = "4.4.0"
nom = "7.1.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
titlecase = "2.2.1"
yaml-front-matter = "0.1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
